--- a/info/dell/dell.html
+++ b/info/dell/dell.html
@@ -23,7 +23,7 @@
                     </li>
                 </ul>
             </div>
-            <div style="margin-right: 65%;" class="logo">
+            <div class="logo">
               <a href="#">
                   <img src="../../imgs/logo.png" alt="logo">
               </a>
